dark mode fixed on singleHotel and singleUser

--- a/admin/src/pages/singleHotel/singleHotel.scss
+++ b/admin/src/pages/singleHotel/singleHotel.scss
@@ -170,6 +170,7 @@
           background-color: #000;
           padding: 5px;
           border-radius: 50%;
+          cursor: pointer;
         }
 
         .leftArrow{
