--- a/admin/src/pages/singleUser/singleUser.scss
+++ b/admin/src/pages/singleUser/singleUser.scss
@@ -1,6 +1,7 @@
-.single {
+.singleUser {
   display: flex;
   width: 100%;
+  
   .singleContainer {
     flex: 6;
 
@@ -10,7 +11,6 @@
       gap: 20px;
 
       .left {
-        flex: 1;
         box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
         padding: 20px;
         border-radius: 5px;
